# meraki

./: .bumpversion.cfg  CMakeLists.txt  README.md  appveyor.yml  circle.yml  pyproject.toml  setup.py
.github/workflows/: build.yaml
bindings/python/meowpow/: __init__.py  _build.py
bindings/python/tests/: test_meowpow.py  test_meraki.py
cmake/: Config.cmake.in
include/ethash/: meowpow.hpp  progpow.hpp
include/meowpow/: hash_types.h  hash_types.hpp  keccak.h  keccak.hpp  meowpow.h  meowpow.hpp  progpow.hpp  version.h
lib/: CMakeLists.txt
lib/ethash/: CMakeLists.txt  ethash.cpp  meowpow.cpp  progpow.cpp
lib/keccak/: CMakeLists.txt  keccak.c  keccakf1600.c  keccakf800.c
lib/meowpow/: CMakeLists.txt  bit_manipulation.h  builtins.h  endianness.hpp  kiss99.hpp  managed.cpp  meowpow-internal.hpp  meowpow.cpp  primes.c  primes.h  progpow.cpp
lib/meraki/: progpow.cpp
lib/support/: attributes.h
scripts/ci/: python_build_wheels.sh
test/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  keccak_benchmarks.cpp  keccak_utils.cpp  keccak_utils.hpp  managed_benchmarks.cpp  meowpow_benchmarks.cpp  meraki_benchmarks.cpp  progpow_benchmarks.cpp  threadsync_benchmarks.cpp  threadsync_utils.cpp  threadsync_utils.hpp
test/daemon/: CMakeLists.txt  meowpow.cpp  meraki.cpp
test/fakeminer/: CMakeLists.txt  fakeminer.cpp
test/fuzzing/: CMakeLists.txt  keccak_fuzzer.cpp
test/integration/: CMakeLists.txt
test/integration/cmake-config/: CMakeLists.txt  cmake_config_test.cpp
test/integration/compilation/: CMakeLists.txt  ethash_header_test.c  meraki_header_test.c
test/lightverify/: CMakeLists.txt  lightverify.cpp
test/tools/: CMakeLists.txt  kiss99_tester.cpp
test/unittests/: CMakeLists.txt  helpers.hpp  progpow_test_vectors.hpp  test_bit_manipulation.cpp  test_ethash.cpp  test_keccak.cpp  test_kiss.cpp  test_managed.cpp  test_meraki.cpp  test_primes.cpp  test_progpow.cpp  test_version.cpp
